force-app/main/default/objects/GAN__c/GAN__c.object-meta.xml
<CustomObject>
    <label>GAN</label>
    <nameField>
        <label>GAN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GANS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>