force-app/main/default/objects/GAN__c/fields/GAN_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>GAN_Account_Name__c</fullName>
    <label>GAN Account Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>