force-app/main/default/objects/GAN__c/fields/GAN_Description__c.field-meta.xml
<CustomField>
    <fullName>GAN_Description__c</fullName>
    <label>GAN Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>