force-app/main/default/objects/GAN__c/fields/GAN_Number__c.field-meta.xml
<CustomField>
    <fullName>GAN_Number__c</fullName>
    <label>GAN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>